# cuda_opengl

./: CMakeLists.txt  README.md
src/: main.cpp
src/include/: cuda_kernels.cuh  game_of_life.cuh
src/kernels/: cuda_kernels.cu  game_of_life.cu
